--- a/restaurant/.env.examples
+++ b/restaurant/.env.examples
@@ -11,3 +11,6 @@ SQL_DB_PORT = your_db_port
 CLOUDINARY_CLOUD_NAME = your_cloudinary_cloud_name
 CLOUDINARY_API_KEY = your_cloudinary_api_key
 CLOUDINARY_API_SECRET = your_cloudinary_api_secret_key
+
+CLIENT_ID = your_client_id_key
+CLIENT_SECRET = your_client_secret_key
